syntax = "proto3";

option java_package = "me.kfricilone.spring.api.messages.web.client";
option java_multiple_files = true;

message WebClientRequest {
    int32 type = 1;
    string name = 2;
    int64 crc = 3;
}
