syntax = "proto3";

option java_package = "me.kfricilone.spring.api.messages.web.client";
option java_multiple_files = true;

message WebConfigRequest {
    int32 type = 1;
}
