syntax = "proto3";

option java_package = "me.kfricilone.spring.api.messages.web.server";
option java_multiple_files = true;

message WebConfigResponse {
    int32 type = 1;
    bytes config = 2;
}
